@@ -44,7 +44,10 @@ const ConnectPageOnboarding = () => {
 
 	const handleSetup = () => {
 		setSubmitted( true );
-		wcpayTracks.recordEvent( wcpayTracks.events.CONNECT_ACCOUNT_CLICKED );
+		wcpayTracks.recordEvent( wcpayTracks.events.CONNECT_ACCOUNT_CLICKED, {
+			// eslint-disable-next-line camelcase
+			wpcom_connection: wcpaySettings.isJetpackConnected ? 'Yes' : 'No',
+		} );
 	};
 
 	return (
