@@ -8,6 +8,7 @@
 * Fix - Fixed broken search on transactions list page.
 * Add - More helpful message on checkout errors.
 * Update - Change the default track `recordEvent` to use @woocommerce/tracks.
+* Add - WPCOM connection status event prop to 'wcpay_connect_account_clicked' track.
 
 = 2.2.0 - 2021-03-31 =
 * Fix - Paying with a saved card for a subscription with a free trial will now correctly save the chosen payment method to the order for future renewals.
